--- a/PracticeJs/index.html
+++ b/PracticeJs/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="button"> Click Me</button>
     <script src="index.js"></script>
 </body>
 </html>
