--- a/PracticeJs/index.html
+++ b/PracticeJs/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <button id="button"> Click Me</button>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+     <script src="App.js"></script>
 </body>
 </html>
